--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Encryptionapps"
         tools:targetApi="31">
         <activity
+            android:name=".DecryptionsActivity3"
+            android:exported="false" />
+        <activity
             android:name=".EncryptionsActivity3"
             android:exported="false" />
         <activity
